# gemara-py

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  Taskfile.yml  generate.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  release-drafter.yml
docs/superpowers/plans/: 2026-07-21-gemara-py-bootstrap.md
docs/superpowers/specs/: 2026-07-21-gemara-py-bootstrap-design.md
gemara_py/: __init__.py
gemara_py/types/gemara_1_0_0/: __init__.py  types.py
gemara_py/types/gemara_1_2_0/: __init__.py
gemara_py/types/gemara_1_3_0/: __init__.py  types.py
tests/: test_types.py
