[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemara-py"
version = "0.1.0"
description = "Gemara types as Pydantic models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator",
    "pytest",
    "pyyaml",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["gemara_py*"]

[tool.ruff]
target-version = "py311"
line-length = 120
