[build-system]
requires = ["setuptools>=83.0.0", "setuptools-scm>=10.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gemara-py"
dynamic = ["version"]
description = "Gemara types as Pydantic models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/complytime-labs/gemara-py"
Repository = "https://github.com/complytime-labs/gemara-py"
Issues = "https://github.com/complytime-labs/gemara-py/issues"

[dependency-groups]
dev = [
    "datamodel-code-generator",
    "pytest",
    "pyyaml",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["gemara_py*"]

[tool.setuptools-scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py311"
line-length = 120
